--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <audio id="background-audio" src="assets/打火基音频.mp3" autoplay loop preload="auto" playsinline aria-hidden="true"></audio>
+  <audio id="background-audio" src="assets/打火基音频.mp3" autoplay loop preload="auto" playsinline muted aria-hidden="true"></audio>
   <canvas id="hero-canvas" aria-hidden="true"></canvas>
   <div class="film-grain" aria-hidden="true"></div>
   <main class="hero" role="main">
@@ -37,4 +37,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
