仍然无声音，添加一个播放按钮 1.1

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <audio id="background-audio" src="assets/打火基音频.mp3" autoplay loop preload="auto" playsinline muted aria-hidden="true"></audio>
+  <button type="button" class="audio-toggle" data-audio-toggle aria-pressed="false">播放背景音乐</button>
   <canvas id="hero-canvas" aria-hidden="true"></canvas>
   <div class="film-grain" aria-hidden="true"></div>
   <main class="hero" role="main">
@@ -37,5 +38,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
