--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <audio id="background-audio" src="assets/打火基音频.mp3" autoplay loop preload="auto" playsinline muted aria-hidden="true"></audio>
+  <audio id="background-audio" src="assets/bg-audio.mp3" autoplay loop preload="auto" playsinline muted aria-hidden="true"></audio>
   <button type="button" class="audio-toggle" data-audio-toggle aria-pressed="false">播放背景音乐</button>
   <canvas id="hero-canvas" aria-hidden="true"></canvas>
   <div class="film-grain" aria-hidden="true"></div>
@@ -38,6 +38,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
