--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css?v=20250925" />
 </head>
 <body>
   <audio id="background-audio" src="assets/bg-audio.mp3" autoplay loop preload="auto" playsinline muted aria-hidden="true"></audio>
@@ -35,9 +35,10 @@
       <span class="hero__hint-line"></span>
     </div>
   </main>
-  <script src="script.js"></script>
+  <script src="script.js?v=20250925" defer></script>
 </body>
 </html>
+
 
 
 
